# python-project-83

./: .gitignore  Makefile  README.md  database.sql  poetry.lock_test  pyproject.toml
.github/workflows/: my.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: 404.html  base.html  index.html  url.html  urls.html
tests/: test_check_error.py  test_get_content.py  test_is_dublicate_url.py  test_normalize_url.py  test_save_new_url_to_bd_urls.py
tests/fixtures/: test_meta1.html  test_meta2.html  test_meta3.html  test_meta4.html
